src/Microsoft.Health.Fhir.Liquid.Converter.UnitTests/TestData/TestTemplates/ValidValidateTemplates/ValidUnmatchedTemplate1.liquid
{% validate "TestSchema2.json" -%}
{
    "resourceType": "{{ msg.resourceType }}",
    "id": "{{ msg.id }}",
    "additionalProperty": "additionalProperty"
}
{% endvalidate -%}
