src/Microsoft.Health.Fhir.Liquid.Converter.UnitTests/TestData/TestTemplates/InvalidValidateTemplates/InvalidRefSchema.liquid
{% validate "InvalidTestSchema.json" -%}
{
    "resourceType": "{{ msg.resourceType }}",
    "id": "{{ msg.id }}"
}
{% endvalidate -%}
